--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "bootstrap": "^5.0.1",
     "eslint-import-resolver-typescript": "^2.4.0",
     "formik": "^2.2.9",
+    "jest-enzyme": "^7.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
@@ -30,6 +34,8 @@
     "start": "react-scripts start",
     "build": "tsc",
     "test": "react-scripts test",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,11 +60,19 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.9",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "babel-jest": "^26.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
@@ -67,9 +81,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.0",
     "prettier": "^2.3.1",
     "prettier-eslint": "^12.0.0",
-    "react-scripts": "^3.4.4",
     "typescript": "^4.3.5"
   }
 }
