--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   },
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/bootstrap": "^5.0.16",
     "@types/jest": "^26.0.23",
@@ -20,6 +18,7 @@
     "bootstrap": "^5.0.1",
     "eslint-import-resolver-typescript": "^2.4.0",
     "formik": "^2.2.9",
+    "history": "^5.0.0",
     "jest-enzyme": "^7.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -65,6 +64,8 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
     "@types/enzyme": "^3.10.9",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react-router-dom": "^5.1.7",
